# modern-cpp-2021

h1/task_2/: CMakeLists.txt  build.sh  install.sh
h2/.clangd/index/: main.cc.2AF196E7F3C4A6F6.idx
h2/task_1/: CMakeLists.txt
h2/task_1/src/: main.cpp
h2/task_2/: CMakeLists.txt
h2/task_2/.clangd/index/: main.cc.2AF196E7F3C4A6F6.idx  tools.cc.A5B02752AB0D0516.idx  tools.hpp.5EB871A8FE65325C.idx
h2/task_2/include/: tools.hpp
h2/task_2/src/: main.cc  test.cc  tools.cc
h6/io_tools/: io_tools.cpp  io_tools.hpp
h6/tests/: test_from_file.cpp  test_histogram.cpp  test_init.cpp  test_resize.cpp
h7/tests/: test_kmeans.cpp
h8/task_2/tests/: test_from_png.cpp  test_from_ppm.cpp  test_init.cpp  test_resize.cpp
h9/tests/: CMakeLists.txt  test_data.cpp  test_data.hpp  test_dictionary.cpp  test_histograms.cpp
